@@ -1,3 +1,8 @@
+2000-08-21  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* Actors teleport to chairs if blocked.
+	* Shortcuts:  f=feed, m=show map, b=open spellbook, w=use watch.
+
 2000-08-21  Willem Jan Palenstijn  <palenstijn@wanadoo.nl>
 
 	* exult.cc, actors.cc: alt-G toggles God Mode, making your party
